rsass/tests/spec/non_conformant/errors/import/file/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file"

fn runner() -> crate::TestRunner {
    super::runner().with_cwd("file")
}

mod control_else;

mod control_if;

mod test_loop;

mod mixin;

mod simple;
